--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,5 @@
 MONGO_URI=mongodb://localhost:27017/local-events
-JWT_SECRET=supersecretkey
+JWT_SECRET=
 PORT=5000
 CLIENT_URL=http://localhost:3000
-PREDICTHQ_TOKEN=rqT3ICkeKQasuFHWKV_XND5MS_RtrNvCDqUHt43j
-EVENTBRITE_TOKEN=6HDYCQ3V7ZJ3L6USMTHU
+PREDICTHQ_TOKEN=
